restrict-cross-ns-reference.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: restrict-cross-ns-reference
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups: [ "" ]
      apiVersions: [ "v1" ]
      operations: [ "CREATE" ]
      resources: [ "persistentvolumeclaims" ]
    namespaceSelector:
      matchExpressions:
      # Targets Namespaces that do not have the label "cross-ns-referencing=enabled"
      - key: cross-ns-referencing
        operator: NotIn
        values: [ "enabled" ]
  validations:
  - expression: "!has(object.spec.dataSourceRef) || !has(object.spec.dataSourceRef.namespace)"
    message: "Cross-namespace references are disabled in this namespace. Please contact your cluster admin to enable 'cross-ns-referencing=enabled' label."
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: restrict-cross-ns-reference-binding
spec:
  policyName: restrict-cross-ns-reference
  validationActions: [ Deny ]
